# yoyh

./: .editorconfig  README.md  manage.py  pyproject.toml
polls/: views.py
polls/migrations/: 0001_initial.py
yoyh/: asgi.py  settings.py  urls.py  wsgi.py
