[project]
name = "yoyh"
version = "0.1.0"
description = "Webapp to track owes between your acquaintances"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "GNU AGPL v3" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "poetry-core (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
